--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,14 @@
-<h2 id="title">Welcome to Ember</h2>
+<header class="jumbotron">
+  <h1>Questions and Answers Message Board</h1>
+</header>
+
+<div class="container">
 
 {{outlet}}
+
+</div>
+
+<hr>
+
+<footer>
+</footer>
