--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,4 +1,3 @@
-<li>Question: {{question.content}}, Author: {{question.questionAuthor}}
-  {{update-question question=question updateQuestion="updateQuestion"}}
+<li>{{#link-to 'question' question.id}}{{question.content}}{{question.questionAuthor}}{{/link-to}}
 <button {{action 'deleteQuestion' question}}>Delete question</button>
 </li>
