--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -4,7 +4,7 @@
 
 <ul>
   {{#each model as |question|}}
-    {{question-tile question=question updateQuestion="updateQuestion" deleteQuestion="deleteQuestion"}}
+    {{question-tile question=question deleteQuestion="deleteQuestion"}}
   {{/each}}
 </ul>
 
