Adds delete functionality to each question's page

--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,3 +1,3 @@
-<li>{{#link-to 'question' question.id}}{{question.content}}{{question.questionAuthor}}{{/link-to}}
+<li>{{#link-to 'question' question.id}}Question: {{question.content}}, Author: {{question.questionAuthor}}{{/link-to}}
 <button {{action 'deleteQuestion' question}}>Delete question</button>
 </li>
