--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -3,3 +3,4 @@
   <br>
   <
   {{update-question question=model updateQuestion="updateQuestion"}}
+  {{question-tile question=model deleteQuestion="deleteQuestion"}}
