Saves answers on questions's pages

--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,3 +1,1 @@
-<li>{{#link-to 'question' question.id}}Question: {{question.content}}, Author: {{question.questionAuthor}}{{/link-to}}
-<button {{action 'deleteQuestion' question}}>Delete question</button>
-</li>
+<li>{{#link-to 'question' question.id}}{{question.content}}{{/link-to}}</li>
