--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,6 +1,1 @@
-<h2>Question: {{model.content}}</h2>
-  <h4>Author: {{model.questionAuthor}}</h4>
-  <br>
-  <
-  {{update-question question=model updateQuestion="updateQuestion"}}
-  {{question-tile question=model deleteQuestion="deleteQuestion"}}
+{{question-detail question=model saveAnswer="saveAnswer" updateQuestion="updateQuestion" deleteQuestion="deleteQuestion"}}
