Adds some styling

--- a/app/templates/components/new-answer.hbs
+++ b/app/templates/components/new-answer.hbs
@@ -11,9 +11,9 @@
           {{input value=answerAuthor id="answerAuthor" class="form-control"}}
         </div>
 
-      <button {{action 'saveAnswer'}}>Save</button>
+      <button class="btn-primary" {{action 'saveAnswer'}}>Save</button>
     </form>
   </div>
 {{else}}
-  <button {{action 'answerFormShow'}}>New Answer</button>
+  <button class="btn-success" {{action 'answerFormShow'}}>New Answer</button>
 {{/if}}
