--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,6 @@
-<h2>Welcome to our Question and Answer Board</h2>
+<h4 class="welcome">Welcome to our Question and Answer Board!</h4>
 
-<h3>This is a list of submitted questions</h3>
+<h3 class="list">List of available questions</h3>
 
 <ul>
   {{#each model as |question|}}
