--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,16 @@
-<header class="jumbotron">
+
+<div class="collapse navbar-collapse">
+          <ul class="nav nav-tabs">
+            <li>{{#link-to 'application'}}Home{{/link-to}}</li>
+          </ul>
+    </div>
+
+<header class="info">
   <h1>Questions and Answers Message Board</h1>
 </header>
+
+
+
 
 <div class="container">
 
