--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,1 +1,1 @@
-<li>{{#link-to 'question' question.id}}{{question.content}}{{/link-to}}</li>
+<li><strong>{{#link-to 'question' question.id}}{{question.content}}{{/link-to}}</strong></li>
