--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,1 +1,2 @@
-{{question-detail question=model saveAnswer="saveAnswer" updateQuestion="updateQuestion" deleteQuestion="deleteQuestion"}}
+{{question-detail question=model saveAnswer="saveAnswer" deleteQuestion="deleteQuestion"}}
+{{update-question question=model updateQuestion="updateQuestion"}}
