--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,4 +1,5 @@
 <h4 class="welcome">Welcome to our Question and Answer Board!</h4>
+<h4> Today is {{current-date}}</h4>
 
 <h3 class="list">List of available questions</h3>
 
