--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,1 +1,1 @@
-<li><strong>{{#link-to 'question' question.id}}{{question.content}}{{/link-to}}</strong></li>
+<li><strong>{{#link-to 'question' question.id}}{{question.content}} By {{question.questionAuthor}}{{/link-to}}</strong></li>
