--- a/app/templates/components/update-question.hbs
+++ b/app/templates/components/update-question.hbs
@@ -15,8 +15,8 @@
         </div>
 
         <div class="form-group">
-          <label for="notes">Notes</label>
-          {{input value=notes id="notes" placeholder=question.notes}}
+          <label for="description">Description</label>
+          {{input value=description id="description" placeholder=question.description}}
         </div>
 
         <button class="btn-success"{{action 'updateQuestion' question}}>Save</button>
