--- a/app/templates/components/new-question.hbs
+++ b/app/templates/components/new-question.hbs
@@ -13,8 +13,8 @@
         </div>
 
         <div class="form-group">
-          <label for="notes">Notes</label>
-          {{input value=notes id="notes"}}
+          <label for="description">Description</label>
+          {{input value=description id="description"}}
         </div>
 
         <button class="btn-success" {{action 'saveQuestion'}}>Save question</button>
