--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,2 +1,2 @@
-{{question-detail question=model saveAnswer="saveAnswer" deleteQuestion="deleteQuestion"}}
+{{question-detail question=model saveAnswer="saveAnswer" deleteQuestion="deleteQuestion" deleteAnswer="deleteAnswer"}}
 {{update-question updateQuestion="updateQuestion" question=model}}
