Allows to vote answers

--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,2 +1,2 @@
-{{question-detail question=model saveAnswer="saveAnswer" deleteQuestion="deleteQuestion" deleteAnswer="deleteAnswer"}}
+{{question-detail question=model saveAnswer="saveAnswer" deleteQuestion="deleteQuestion" deleteAnswer="deleteAnswer" voteUpAnswer="voteUpAnswer" voteDownAnswer="voteDownAnswer"}}
 {{update-question updateQuestion="updateQuestion" question=model}}
