Adds some styling to questions page

--- a/app/templates/components/question-detail.hbs
+++ b/app/templates/components/question-detail.hbs
@@ -19,8 +19,8 @@
 {{#each question.answers as |answer|}}
   <div class="answerBox">
     <ul>
-    <li class="answer"><span id="two"> Answer: </span><strong>{{answer.answerContent}}</strong>, <span id="three">Submitted by:</span><strong> {{answer.answerAuthor}} on {{format-date answer.date_added}}</strong>
-      <strong>Vote results: {{answer.votes}}</strong>
+    <li class="answer"><span id="two"> Answer: </span><strong>{{answer.answerContent}}</strong>, <span id="three">Submitted by:</span><strong> {{answer.answerAuthor}}</strong><span id="three"> On </span><strong>{{format-date answer.date_added}}</strong>
+    <h5><strong>Vote results: {{answer.votes}}</strong></h5>
     <button class="glyphicon glyphicon-thumbs-up" {{action 'voteUpAnswer' answer}}></button>
     <button class="glyphicon glyphicon-thumbs-down" {{action 'voteDownAnswer' answer}}></button>
     <button {{action 'deleteAnswer' answer}}>Delete asnwer</button>
